fix navigation overflow

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -226,7 +226,7 @@
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    overflow: hidden;
+    overflow: visible;
 
     li {
       -webkit-box-flex: 0;
